# stew

./: .gitignore  README.rst  pyproject.toml
stew/: stew.py  strings_txt.py  types.py
tests/: strings.stew  test_loca.py  test_one.py
