[tool.poetry]
name = "stew"
version = "0.1.4"
description = "A library for parsing localization string files"
authors = ["Timofey Danshin <t.danshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
